bad/return_array_in_func_returning_string.example_compiler_output
ERROR
[1mbad/return_array_in_func_returning_string.lat:2:24: [1;31merror: [0;1mreturned value of type `int[]` is not convertible to return type `string`[m
string test() { return new int[3]; }
                       [1;32m^[m
